# go-ddns-daddy

./: LICENSE  README.md  pyproject.toml
src/go_ddns_daddy/: app.py
